--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url(//fonts.googleapis.com/css?family=Hind:300,500);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic);
+
 .centering{
 margin:0 auto
 }
