--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Hind:300,500);
-@import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic);
+@import url(//fonts.googleapis.com/css?family=Nanum+Gothic);
+@import url(//fonts.googleapis.com/css?family=Galada);
 
 .centering{
 margin:0 auto
